# ansible-archivematica-upgrade

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: molecule-common.yml  molecule-compatibility.yml  molecule-phases.yml  static.yml  validate-action-pinning.yml
defaults/: main.yml
docs/runbooks/: 1.17-to-1.18.md
examples/playbooks/: awx.am-upgrade.yml
meta/: main.yml
molecule/: README.md  phase-coverage.yml
molecule/common/: cleanup.yml  converge.yml  coverage.yml  molecule.yml  prepare.yml  requirements.yml  vars.yml  verify.yml
molecule/elasticsearch-readiness-cutover-negative/: cleanup.yml  converge.yml  molecule.yml
molecule/elasticsearch-reindex-negative/: converge.yml  molecule.yml  verify.yml
molecule/elasticsearch-restore-validate-cleanup-negative/: converge.yml  molecule.yml
molecule/elasticsearch-runtime-negative/: converge.yml  molecule.yml
molecule/elasticsearch-search-total-cap/: converge.yml  molecule.yml  prepare.yml
molecule/phase-guardrails-negative/: converge.yml  molecule.yml
molecule/phase-lifecycle-mysql/: converge.yml  molecule.yml
molecule/phase-lifecycle-sqlite/: converge.yml  molecule.yml
molecule/phase-restore-success/: converge.yml  molecule.yml
molecule/phase-resume-checkpoints/: converge.yml  molecule.yml
molecule/shared/: service_fixtures.yml
tasks/: main.yml
tasks/common/: capture-aip-storage-stats.yml  capture-application-state.yml  load-context.yml  load-state.yml  refresh-archivematica-apt-key.yml  require-idle.yml  run-migration-hooks.yml
tasks/phases/: check-readiness.yml  (+8 more)
vars/: main.yml
(+65 files in other folders)
